# youtube-save-as-bot

./: Dockerfile  README.md  alembic.ini  bot.py  docker-compose.yml  handlers.py  pyproject.toml  start.sh
admin_panel/admin_panel/: settings.py
admin_panel/users_admin/: admin.py  models.py
celery_app/: tasks.py
config_data/: config.py
db/: ORM.py  database.py  models.py
db/alembic/: env.py
db/alembic/versions/: 4a302ae11051_init.py
middlewares/: album_middleware.py  logger_middleware.py
redis_client/: client_redis.py
s3/: s3_client.py
scheduler/: check_s3.py
sender/: sender.py
utils/: check_limit.py  func.py  main_menu.py  trottle.py
